package storage

import (
	"context"
	"time"

	"github.com/rs/zerolog/log"
	"github.com/yuuki/rpingmesh/proto/agent_analyzer"
)

// Storage handles data storage for the analyzer
type Storage struct {
	dbClient interface{} // This would be a time series DB client in production
}

// NewStorage creates a new storage instance
func NewStorage(dbURI string) (*Storage, error) {
	// In a real implementation, this would connect to a time series database
	// For now, we'll just create a stub

	log.Info().Str("dbURI", dbURI).Msg("Initializing analyzer storage")

	// TODO: Implement actual database connection
	return &Storage{
		dbClient: nil,
	}, nil
}

// Close closes the storage
func (s *Storage) Close() error {
	// Close database connection
	return nil
}

// StoreProbeResult stores a probe result
func (s *Storage) StoreProbeResult(ctx context.Context, result *agent_analyzer.ProbeResult) error {
	log.Debug().
		Str("sourceGID", result.SourceGid).
		Str("destGID", result.DestGid).
		Uint64("rtt", result.Rtt).
		Msg("Storing probe result")

	// TODO: Store in database
	return nil
}

// StorePathInfo stores path information
func (s *Storage) StorePathInfo(ctx context.Context, pathInfo *agent_analyzer.PathInfo) error {
	log.Debug().
		Str("sourceGID", pathInfo.FiveTuple.SourceGid).
		Str("destGID", pathInfo.FiveTuple.DestGid).
		Int("hops", len(pathInfo.Hops)).
		Msg("Storing path info")

	// TODO: Store in database
	return nil
}

// GetRecentProbeResults gets recent probe results
func (s *Storage) GetRecentProbeResults(ctx context.Context, duration time.Duration) ([]*agent_analyzer.ProbeResult, error) {
	log.Debug().
		Str("duration", duration.String()).
		Msg("Getting recent probe results")

	// TODO: Query from database
	return []*agent_analyzer.ProbeResult{}, nil
}

// GetTimeoutRates gets timeout rates for RNICs
func (s *Storage) GetTimeoutRates(ctx context.Context) (map[string]float64, error) {
	log.Debug().Msg("Getting timeout rates")

	// TODO: Query from database and calculate rates
	return map[string]float64{}, nil
}

// GetSLAMetrics gets SLA metrics for the specified time range
func (s *Storage) GetSLAMetrics(ctx context.Context, start, end time.Time) (map[string]interface{}, error) {
	log.Debug().
		Time("start", start).
		Time("end", end).
		Msg("Getting SLA metrics")

	// TODO: Query from database and calculate metrics
	return map[string]interface{}{}, nil
}
